2006-03-02  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added "fi" to ALL_LINGUAS

2006-02-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/adddel.cc:
	* glom/utility_widgets/adddel/adddel.h: Added set_prevent_duplicates() and 
	set_prevent_duplicates_warning().
	* glom/mode_design/box_db_table_relationships.cc:
	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/navigation/box_tables.cc: Use the new AddDel methods to prevent, and warn about, 
	duplicate tables, fields, and relationships, to prevent crashes.

2006-02-23  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.cc: postgres_change_column_type():
	Data conversion commands: Fix crashes when converting from text to boolean, and from 
	boolean to number. Preserve information when converting from anything to boolean.

0.9.7:

2006-02-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout_list.cc:
	* glom/mode_data/dialog_layout_list.h: Do not allow people to put image 
	fields on the list view, because it can not show them yet.
	* glom/utility_widgets/db_adddel/db_adddel.cc: Some skeleton code to 
	support (very scaled-down) images on the list view. But I have not actually 
	implemented it because I do not want yet more versions of the code that 
	works around the libgda 1.2 binary escaping problem. 

2006-02-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/fields/box_db_table_definition.cc: 
	postgres_change_column_type(): Use textcat() to add a preceding 0 when 
	using to_number(), so that it always succeeds. Now I can not make glom 
	crash or error when converting field types, though the results are a bit 
	strange for text<->to date.

2006-02-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h: Add override of 
	calculate_field_in_all_records() that does not need the primary key 
	spoon-fed to it. Get all the primary key values, not all the calculated 
	field values.