@@ -1,52 +1,2 @@
-Large, independent, tasks:
-- UI for administration of postgres users.
-- Add ability to have calculation fields, if Postgres can do that.
-- Add ability to translate table titles and field titles.
-
-Little tasks:
-- Make the Details view (FlowTable) look different when in developer mode.
-  (Add lines around the HBoxes.)
-- Allow editing of the Details view by drag-and-drop, right-clicking (like Glade),
-  as well as the current treeview hierarchy.
-
-  
-User Level:
-- Do not allow developer mode if the postgres permissions are low.
-
-
-
-
-
-Bugs:
-
-
-- Data Mode: Details tab: Finish 'Related Records' Notebook page - put it in a separate tab.
-- Reports Mode: Add a 'Reports' mode.
-- Users Mode: How do we get access info programmatically?
-
-
-
-Fields:
-- Indexed [X].
-- boolean
-- View fields from relationship.
-- Choices - static lists and from relationships.
-  style:
-    - Popup = ENUM
-    - Checkboxes = SET
-- Calculated fields:
-  - Only when viewed?
-  - Look at gnumeric - maybe there's an engine that I can take or be inspired by.
-  - Look at MySQL SELECT functions
-- Group field types - Use a combo that pops up a tree.
-
-
-Future functionality:
-Tools menu:
-  Store database structure in document - this would allow example docs to say 'create database?'.
-  Import/Export data.
-  Show structure: graphical view of tables and their relationships.
-  Export to Web: UI via HTML + JSP + JDBC.
-  Moon on a stick.
 
 
